Navbar jump fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,12 @@ html {
   scroll-behavior: smooth;
 }
 
+.stop-scrolling {
+  position: fixed;
+  overflow-y: scroll;
+  width: 100%;
+}
+
 @font-face {
   font-family: HelveticaLight;
   src: url(../fonts/HelveticaNeue-Light.otf);
@@ -1504,11 +1510,6 @@ section {
 .wp-intro--show {
   opacity: 1;
   display: block;
-}
-
-.stop-scrolling {
-  height: 100vh;
-  overflow-y: hidden;
 }
 
 .wp-intro--fade {
